# opencode-stats-dashboard

./: .eslintrc.json  .gitignore  AGENTS.md  LICENSE  README.md  biome.json  package.json  qa-server.ts  qa-stats.db-shm  qa-stats.db-wal  tsconfig.json
.github/workflows/: ci.yml  publish-npm.yml
.omo/plans/: event-sourced-stats-engine.md
.playwright-mcp/: page-2026-06-04T18-38-19-048Z.yml  page-2026-06-04T18-38-31-958Z.yml  page-2026-06-04T18-38-42-619Z.yml  page-2026-06-04T18-38-54-771Z.yml  page-2026-06-04T18-38-58-021Z.yml  page-2026-06-04T18-39-59-517Z.yml  page-2026-06-04T18-40-07-211Z.yml  page-2026-06-04T18-40-13-687Z.yml  page-2026-06-04T18-40-28-264Z.yml
dashboard/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.vue  main.ts
docs/: architecture.md  dashboard-design.md  dashboard-page-metrics-api-mapping.md  event-surface-validation.md  event-table-mapping.md  local-install.md  multi-instance.md
fixtures/events/: privacy-redaction.json  session-created.json  session-deleted.json  tool-call-completed.json  tool-call-started.json  usage-updated.json
fixtures/opencode-events/: command-executed.json  file-edited.json  message-assistant.json  message-updated.json  permission-replied.json  permission-updated.json  session-compacted.json  session-created.json  session-deleted.json  session-diff.json  session-error.json  (+8 more)
plugin/: package.json
scripts/: build.sh  e2e.sh  postinstall.js  test-all.sh
sidecar/: Cargo.toml
sidecar/sidecar-api/: Cargo.toml
sidecar/sidecar-api/src/api/: events.rs  export.rs  ingest.rs  mod.rs  query.rs
sidecar/sidecar-database/: Cargo.toml
sidecar/sidecar-database/src/: event.rs  lib.rs  reducer.rs  schema.rs
sidecar/sidecar-kernel/: Cargo.toml
sidecar/sidecar-kernel/src/: config.rs
sidecar/sidecar-util/: Cargo.toml
sidecar/sidecar-util/src/: lib.rs
sidecar/static/: index.html
sidecar/static/assets/: index-C8LoB27L.js  index-C8LoB27L.js.map  index-Cq3WcLDz.css
src/: index.ts  logger.ts  types.ts
tests/: db-schema.test.ts  db.test.ts  event-mapper.test.ts  init.test.ts  plugin-hook-mapping.test.ts  projection-sessions.test.ts  projection-tool-calls.test.ts  setup.test.ts  sse-broadcaster.test.ts
(+155 files in other folders)
