[workspace]
members = ["sidecar-*"]
default-members = ["sidecar-*"]
resolver = "3"

[workspace.package]
rust-version = "1.90.0"
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
chrono = { version = "~0.4", features = ["serde"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3", default-features = false, features = ["registry", "fmt"] }
