[package]
name = "sidecar-api"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "sidecar-api"
path = "src/bin/api.rs"

[dependencies]
sidecar-database = { path = "../sidecar-database" }
sidecar-kernel = { path = "../sidecar-kernel" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

csv = "~1.3"
rusqlite = { version = "~0.35", features = ["bundled"] }
tokio = { version = "~1", features = ["full"] }
salvo = { version = "~0.93", features = ["cors", "affix-state", "sse"] }
futures-util = { version = "~0.3" }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "~3"
