[package]
name = "sidecar-database"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
sidecar-kernel = { path = "../sidecar-kernel" }

chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { version = "~2" }
tracing = { workspace = true }

rusqlite = { version = "~0.35", features = ["bundled"] }
uuid = { version = "~1", features = ["v4"] }
