[package]
name = "sidecar-kernel"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

config = { version = "~0.15", default-features = false, features = ["toml"] }
